--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="author" content="John P Dickerson" />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="author" content="John P Dickerson" />
 
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
-            <title>Lean and Beefy</title>
-    </head>
+  <title>Lean and Beefy</title>
+  <style>
+  .img-max {
+    max-width: 500px;
+    width:100%;
+  }
+  </style>
+</head>
 
-    <body>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-        <div class="container">
-            <div class="row justify-content-center">
-                <img src="img/usda_1000x1000.jpg" class="mx-auto d-block img-fluid" alt="USDA Certification of Machine Learning"/>
-            </div>
-            <div class="row justify-content-center">
-                <h2 class="text-center font-weight-bold">
-                    Free-range Machine Learning
-                </h2>
-            </div>
-        </div>
-    </body>
+  <div class="container-sm">
+    <div class="row justify-content-center">
+      <img src="img/usda_1000x1000.jpg" class="mx-auto d-block img-max" alt="USDA Certification of Machine Learning"/>
+    </div>
+    <div class="row justify-content-center">
+      <h2 class="text-center font-weight-bold">
+        Free-range Machine Learning
+      </h2>
+    </div>
+  </div>
+</body>
 </html>
